--- a/src/components/ListSpent.astro
+++ b/src/components/ListSpent.astro
@@ -66,7 +66,7 @@ const spentItems = data?.map((item) => ({
             </tr>
           ) : (
             spentItems?.map((item) => (
-              <tr key={item.id} id={`tr-${item.id}`}>
+              <tr id={`tr-${item.id}`}>
                 <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500 dark:text-gray-300">
                   {item.date}
                 </td>
