--- a/src/components/AddSpent.astro
+++ b/src/components/AddSpent.astro
@@ -42,12 +42,12 @@ const getTodayDate = () => {
       required
     >
       <option value="" disabled selected>Select a category</option>
-      <option value="super">Super</option>
-      <option value="nafta">Nafta</option>
-      <option value="verduleria">Verduleria</option>
+      <option value="dietetica">Dietetica</option>
       <option value="farmacia">Farmacia</option>
+      <option value="nafta">Nafta</option>
       <option value="restaurant">Restaurant</option>
-      <option value="restaurant">Dietetica</option>
+      <option value="super">Super</option>
+      <option value="verduleria">Verduleria</option>
       <option value="other">Otro</option>
     </select>
   </div>
