--- a/src/components/ListSpent.astro
+++ b/src/components/ListSpent.astro
@@ -14,7 +14,9 @@ const spentItems = data?.map((item) => ({
   amount: item.amount,
   paymentType: item.payment_type,
   createdBy: item.created_by,
+  notes: item.notes,
 }));
+
 ---
 
 <div
@@ -43,6 +45,11 @@ const spentItems = data?.map((item) => ({
           <th
             class="px-6 py-3 text-left text-xs font-medium text-gray-500 dark:text-gray-300 uppercase tracking-wider"
             >Created By</th
+          >
+
+          <th
+            class="px-6 py-3 text-left text-xs font-medium text-gray-500 dark:text-gray-300 uppercase tracking-wider"
+            >Notes</th
           >
           <th
             class="px-6 py-3 text-left text-xs font-medium text-gray-500 dark:text-gray-300 uppercase tracking-wider"
@@ -81,6 +88,9 @@ const spentItems = data?.map((item) => ({
                 </td>{" "}
                 <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500 dark:text-gray-300 capitalize">
                   {item.createdBy}
+                </td>
+                <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500 dark:text-gray-300 capitalize">
+                  {item.notes}
                 </td>
                 <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500 dark:text-gray-300 flex space-x-2">
                   {/* <button class="edit-btn text-blue-600 hover:text-blue-900" data-id={item.id}>
